@@ -7,6 +7,13 @@ import java.util.*;
 
 import org.junit.*;
 
+/**
+ *  Benchmarks raw message throughput. Nearly identical to 
+ *  http://letitcrash.com/post/20397701710/50-million-messages-per-second-on-a-single.
+ *  
+ *  Run with -server -XX:+UseNUMA -XX:+UseCondCardMark -XX:-UseBiasedLocking -Xms1024M -Xmx2048M 
+ *  -Xss1M -XX:+UseParallelGC
+ */
 public final class EchoBenchmark implements TestSupport {
   private static final String ECHO = "driver";
   private static final String DRIVER = "run";
